--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "debounce": "^1.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
